--- a/client-2d-web/index.html
+++ b/client-2d-web/index.html
@@ -1,18 +1,23 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Astral — 2D Client (MVP)</title>
-    <style>
-      html, body, canvas { margin:0; height:100%; width:100%; background:#0b0e14; color:#cfd8dc; }
-      #hud { position:fixed; left:8px; top:8px; font:14px/1.3 system-ui, sans-serif; }
-      .badge { background:#263238; padding:6px 8px; border-radius:8px; }
-    </style>
-  </head>
-  <body>
-    <div id="hud" class="badge">WASD/Arrows to thrust • Ship: <span id="ship">?</span></div>
-    <canvas id="cv"></canvas>
-    <script type="module" src="./main.js"></script>
-  </body>
-</html>
+<!doctype html><html><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>TinkerVerse — 2D Client (MVP)</title>
+<style>
+  html, body, canvas { margin:0; height:100%; width:100%; background:#0b0e14; color:#cfd8dc; }
+  #hud { position:fixed; left:8px; top:8px; font:14px/1.3 system-ui, sans-serif; display:flex; gap:8px; align-items:center; }
+  .badge { background:#263238; padding:6px 8px; border-radius:8px; }
+  button { background:#37474f; color:#cfd8dc; border:1px solid #455a64; padding:6px 10px; border-radius:8px; cursor:pointer; }
+  button:hover { background:#455a64; }
+  #inv { white-space:pre; }
+</style>
+</head>
+<body>
+  <div id="hud" class="badge">
+    <span>Ship: <span id="ship">?</span></span>
+    <button id="btnMine">Mine</button>
+    <button id="btnStop">Stop</button>
+    <button id="btnFood">Print Food (1 kg)</button>
+    <span id="inv"></span>
+  </div>
+  <canvas id="cv"></canvas>
+  <script type="module" src="./main.js"></script>
+</body></html>
